log
Sun 16 Oct 2022 12:22:41 AM UTC: 
 tests:  0|4
total_score: 0/70
1eaf19d
Sun 16 Oct 2022 12:26:50 AM UTC: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
99485f4
Sun 16 Oct 2022 05:45:05 PM UTC: 
 tests:  1|3
total_score: 10/70
e02fa05
Sun 16 Oct 2022 05:45:40 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
1bf8f5b
Sun 16 Oct 2022 05:48:49 PM UTC: 
 heap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
8fff6fa
Sun 16 Oct 2022 05:51:57 PM UTC: 
 heap.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:52:81: error: expected expression before ‘>’ token
   52 |   while((2*aux+2) <= pq->capac && (pq->heapArray[2*aux+1].priority > pq-        >heapArray[aux].priority ||pq->heapArray[2*aux+2].priority > pq->heapArray[aux].priority)){
      |                                                                                 ^
Compilation failed
e47580f
Sun 16 Oct 2022 05:54:59 PM UTC: 
 heap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  7|1
total_score: 45/70
a819d88
Sun 16 Oct 2022 05:57:30 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|0
total_score: 70/70
33a3a9b
Sun 16 Oct 2022 05:59:26 PM UTC: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  8|0
total_score: 70/70
857ad8f
Sun 16 Oct 2022 06:03:33 PM UTC: 
 heap.c | 21 +--------------------
 1 file changed, 1 insertion(+), 20 deletions(-)
 tests:  7|1
total_score: 45/70
d2af5e7
Sun 16 Oct 2022 06:10:14 PM UTC: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
1061e6d
Sun 16 Oct 2022 09:07:54 PM UTC: 
 tests:  7|1
total_score: 45/70
50fcb9d
